--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,10 @@ a {
   text-decoration: none;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 
 
 .slide-bottom {
